// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart renders correctly when data is async 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
  .cache-1j0fs0x-StyledContainer {
  margin-top: 16px;
}

.cache-3lxp85-head {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.cache-3lxp85-head>:not(:last-child) {
  margin-right: 8px;
}

.cache-qp094k-LongContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.cache-17ppb8m-StyledText-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1dqtoqc-body>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.cache-achh5b-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.cache-achh5b-row>:not(:last-child) {
  margin-right: 8px;
}

.cache-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3xyhdp-CellValueContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-91n8er-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-suenwm-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.cache-1qgb3ny-StyledText-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-gv8bfd-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #0083e6;
}

.cache-1ypaxp0-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #3ebd8f;
}

<div
    class="cache-1j0fs0x-StyledContainer erndk5t0"
  >
    <div
      class="cache-3lxp85-head"
    >
      <div
        class="cache-qp094k-LongContainer erndk5t1"
      >
        Legend
      </div>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Minimum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Maximum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Average
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Current
      </span>
    </div>
    <div
      class="cache-1dqtoqc-body"
    >
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r1u:"
              name="lineChartMultiple1"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r1u:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 1
                    </span>
                    <div
                      class="cache-suenwm-legend"
                      data-testid="label-lineChartMultiple1"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -9
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          55
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          9.27
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0
        </span>
      </div>
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r25:"
              name="lineChartMultiple2"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r25:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 2
                    </span>
                    <div
                      class="cache-gv8bfd-legend"
                      data-testid="label-lineChartMultiple2"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -14
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          76
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7.73
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0
        </span>
      </div>
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r2c:"
              name="lineChartMultiple3"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r2c:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 3
                    </span>
                    <div
                      class="cache-1ypaxp0-legend"
                      data-testid="label-lineChartMultiple3"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -38
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          93
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          21.53
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          34
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly when legend is deselected 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
  .cache-1j0fs0x-StyledContainer {
  margin-top: 16px;
}

.cache-3lxp85-head {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.cache-3lxp85-head>:not(:last-child) {
  margin-right: 8px;
}

.cache-qp094k-LongContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.cache-17ppb8m-StyledText-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1dqtoqc-body>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.cache-achh5b-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.cache-achh5b-row>:not(:last-child) {
  margin-right: 8px;
}

.cache-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3xyhdp-CellValueContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-91n8er-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-suenwm-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.cache-1qgb3ny-StyledText-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="cache-1j0fs0x-StyledContainer erndk5t0"
  >
    <div
      class="cache-3lxp85-head"
    >
      <div
        class="cache-qp094k-LongContainer erndk5t1"
      >
        Legend
      </div>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Minimum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Maximum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Average
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Current
      </span>
    </div>
    <div
      class="cache-1dqtoqc-body"
    >
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r1j:"
              name="lineChartSerie"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r1j:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      line chart values
                    </span>
                    <div
                      class="cache-suenwm-legend"
                      data-testid="label-lineChartSerie"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -7
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0.2
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with data 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with data transformer 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with detailed legend 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
  .cache-1j0fs0x-StyledContainer {
  margin-top: 16px;
}

.cache-3lxp85-head {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.cache-3lxp85-head>:not(:last-child) {
  margin-right: 8px;
}

.cache-qp094k-LongContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.cache-17ppb8m-StyledText-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1dqtoqc-body>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.cache-achh5b-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.cache-achh5b-row>:not(:last-child) {
  margin-right: 8px;
}

.cache-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3xyhdp-CellValueContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-91n8er-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-suenwm-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.cache-1qgb3ny-StyledText-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="cache-1j0fs0x-StyledContainer erndk5t0"
  >
    <div
      class="cache-3lxp85-head"
    >
      <div
        class="cache-qp094k-LongContainer erndk5t1"
      >
        Legend
      </div>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Minimum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Maximum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Average
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Current
      </span>
    </div>
    <div
      class="cache-1dqtoqc-body"
    >
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r4:"
              name="lineChartSerie"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r4:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      line chart values
                    </span>
                    <div
                      class="cache-suenwm-legend"
                      data-testid="label-lineChartSerie"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -7
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0.2
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with multiple series 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
  .cache-1j0fs0x-StyledContainer {
  margin-top: 16px;
}

.cache-3lxp85-head {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.cache-3lxp85-head>:not(:last-child) {
  margin-right: 8px;
}

.cache-qp094k-LongContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.cache-17ppb8m-StyledText-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1dqtoqc-body>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.cache-achh5b-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.cache-achh5b-row>:not(:last-child) {
  margin-right: 8px;
}

.cache-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3xyhdp-CellValueContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-91n8er-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-suenwm-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.cache-1qgb3ny-StyledText-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-gv8bfd-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #0083e6;
}

.cache-1ypaxp0-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #3ebd8f;
}

<div
    class="cache-1j0fs0x-StyledContainer erndk5t0"
  >
    <div
      class="cache-3lxp85-head"
    >
      <div
        class="cache-qp094k-LongContainer erndk5t1"
      >
        Legend
      </div>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Minimum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Maximum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Average
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Current
      </span>
    </div>
    <div
      class="cache-1dqtoqc-body"
    >
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":rq:"
              name="lineChartMultiple1"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rq:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 1
                    </span>
                    <div
                      class="cache-suenwm-legend"
                      data-testid="label-lineChartMultiple1"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -9
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          55
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          9.27
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0
        </span>
      </div>
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r11:"
              name="lineChartMultiple2"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r11:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 2
                    </span>
                    <div
                      class="cache-gv8bfd-legend"
                      data-testid="label-lineChartMultiple2"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -14
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          76
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7.73
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0
        </span>
      </div>
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":r18:"
              name="lineChartMultiple3"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r18:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      Serie 3
                    </span>
                    <div
                      class="cache-1ypaxp0-legend"
                      data-testid="label-lineChartMultiple3"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -38
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          93
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          21.53
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          34
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with point formatter 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly with timeline data 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
  .cache-1j0fs0x-StyledContainer {
  margin-top: 16px;
}

.cache-3lxp85-head {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 8px;
  border-bottom: 1px solid #e9eaeb;
}

.cache-3lxp85-head>:not(:last-child) {
  margin-right: 8px;
}

.cache-qp094k-LongContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
}

.cache-17ppb8m-StyledText-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1dqtoqc-body>:not(:last-child) {
  border-bottom: 1px solid #e9eaeb;
}

.cache-achh5b-row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px 0;
}

.cache-achh5b-row>:not(:last-child) {
  margin-right: 8px;
}

.cache-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.cache-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.cache-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3xyhdp-CellValueContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-91n8er-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-suenwm-legend {
  margin-left: 16px;
  width: 32px;
  height: 2px;
  background-color: #5e47be;
}

.cache-1qgb3ny-StyledText-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: right;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 72px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    class="cache-1j0fs0x-StyledContainer erndk5t0"
  >
    <div
      class="cache-3lxp85-head"
    >
      <div
        class="cache-qp094k-LongContainer erndk5t1"
      >
        Legend
      </div>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Minimum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Maximum
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Average
      </span>
      <span
        class="erndk5t3 cache-17ppb8m-StyledText-StyledText e13y3mga0"
      >
        Current
      </span>
    </div>
    <div
      class="cache-1dqtoqc-body"
    >
      <div
        class="cache-achh5b-row"
      >
        <div
          class="cache-qp094k-LongContainer erndk5t1"
        >
          <div
            aria-disabled="false"
            class="cache-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="true"
            data-error="false"
          >
            <input
              aria-checked="true"
              aria-invalid="false"
              checked=""
              class="cache-1jd075o-CheckboxInput eqr7bqq2"
              id=":rf:"
              name="lineChartHours"
              type="checkbox"
              value=""
            />
            <svg
              class="cache-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="cache-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="cache-10ivylf-Stack ehpbis70"
            >
              <div
                class="cache-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="cache-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rf:"
                >
                  <div
                    class="cache-3xyhdp-CellValueContainer erndk5t2"
                  >
                    <span
                      class="cache-91n8er-StyledText e13y3mga0"
                    >
                      line chart hours values
                    </span>
                    <div
                      class="cache-suenwm-legend"
                      data-testid="label-lineChartHours"
                    />
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          -14
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          76
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          7.73
        </span>
        <span
          class="erndk5t3 cache-1qgb3ny-StyledText-StyledText e13y3mga0"
        >
          0
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LineChart renders correctly without data 1`] = `
<DocumentFragment>
  <div
    style="height: 537px;"
  >
    <div
      style="width: 100%; height: 100%;"
    />
  </div>
</DocumentFragment>
`;
